--- a/src/App.css
+++ b/src/App.css
@@ -107,3 +107,28 @@ button{
 button:hover{
   background: #764ba2;
 }
+
+
+
+@media(max-width : 800px) {
+
+.App {
+  width:80%;
+}
+.slider {
+  width: 50px;
+  height: 25px;
+}
+
+.slider:before {
+  height: 16px;
+  width: 16px;
+}
+h1{
+  font-size: 20px;
+}
+
+h3{
+  font-size: 15px;
+}
+}
